force-app/main/default/objects/EMC_Process_Builder_Settings__c/EMC_Process_Builder_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>EMC Process Builder Settings</label>
</CustomObject>