force-app/main/default/objects/EMC_Process_Builder_Settings__c/fields/Commercial_Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Account_Classification__c</fullName>
    <label>Commercial Account Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>