force-app/main/default/objects/EMC_Process_Builder_Settings__c/fields/Enterprise_Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account_Classification__c</fullName>
    <label>Enterprise Account Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>