force-app/main/default/objects/EMC_Process_Builder_Settings__c/fields/GC_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>GC_No_of_Days__c</fullName>
    <label>GC No of Days</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>