force-app/main/default/objects/EMC_Process_Builder_Settings__c/fields/OEM_Segment_Business__c.field-meta.xml
<CustomField>
    <fullName>OEM_Segment_Business__c</fullName>
    <label>OEM Segment Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>