force-app/main/default/objects/EMC_Process_Builder_Settings__c/fields/Record_Type_Direct__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Direct__c</fullName>
    <label>Record Type Direct</label>
    <length>100</length>
    <type>Text</type>
</CustomField>