force-app/main/default/objects/EMC_Process_Builder_Settings__c/fields/SOM_Profile__c.field-meta.xml
<CustomField>
    <fullName>SOM_Profile__c</fullName>
    <label>SOM Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>