force-app/main/default/objects/EMC_Process_Builder_Settings__c/fields/SVC_Profile__c.field-meta.xml
<CustomField>
    <fullName>SVC_Profile__c</fullName>
    <label>SVC Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>